opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://git.robur.coop/robur/kevin"
dev-repo: "git+https://github.com/robur-coop/kevin"
bug-reports: "https://git.robur.coop/robur/kevin"
license: "MIT"

depends: [
  "ocaml" {>= "5.3.0"}
  "dune" {>= "3.0.0"}
  "vif"
  "mirage-crypto-rng-mkernel"
  "vifu"
  "rowex"
  "bancos"
  "mpart"
  "art"
]
build: [
  [make "all"]
]
synopsis: "A KV-store as an unikernel"
pin-depends: [
  [ "mkernel.dev"                     "git+https://git.robur.coop/robur/mkernel.git#81a20185f638854ae07e64bbc1a5400bf6588776" ]
  [ "utcp.dev"                        "git+https://github.com/dinosaure/utcp.git#50d0f3a0b42e8ffd3e4b15131dcf2a61b87ef96b" ]
  [ "mnet.dev"                        "git+https://git.robur.coop/robur/mnet.git#26214790b53df78c00eafc48594cfa01290de0df" ]
  [ "httpcats.dev"                    "git+https://github.com/robur-coop/httpcats.git#56ad42dd5667c1699240c609fd0e193f88bba1fb" ]
  [ "mirage-crypto-rng-mkernel.2.0.2" "git+https://github.com/dinosaure/mirage-crypto.git#820db4c1d19acd06dca82ce5615904848a852951" ]
  [ "mhttp.dev"                       "git+https://github.com/dinosaure/mhttp.git#0638dd4620757c0a8062afaa75d1546ae206a604" ]
  [ "flux.dev"                        "git+https://github.com/robur-coop/flux.git#7c4d8733596fd54f2f865c32747ba0eebdb964da" ]
  [ "fluxt.dev"                       "git+https://github.com/robur-coop/flux.git#7c4d8733596fd54f2f865c32747ba0eebdb964da" ]
  [ "vif.dev"                         "git+https://github.com/robur-coop/vif.git#c4c707985246775562aaac65724736ef40d47483" ]
  [ "vifu.dev"                        "git+https://github.com/robur-coop/vif.git#c4c707985246775562aaac65724736ef40d47483" ]
  [ "bancos.dev"                      "git+https://github.com/robur-coop/bancos.git#4249efb5afc74b265bf0157accb542090b14ea2c" ]
  [ "rowex.dev"                       "git+https://github.com/robur-coop/bancos.git#4249efb5afc74b265bf0157accb542090b14ea2c" ]
  [ "mpart.dev"                       "git+https://github.com/robur-coop/bancos.git#4249efb5afc74b265bf0157accb542090b14ea2c" ]
  [ "cachet.dev"                      "git+https://github.com/robur-coop/cachet.git#5352fa9ca3d4d62b506d85dcd8f6f06a7f38dd45" ]
]
